force-app/main/default/objects/DA_Postcode__c/DA_Postcode__c.object-meta.xml
<CustomObject>
    <label>DA Postcode</label>
    <nameField>
        <displayFormat>DAP-{00000000}</displayFormat>
        <label>DA Postcode ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DA Postcodes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>