force-app/main/default/objects/DA_Postcode__c/fields/Association_Code__c.field-meta.xml
<CustomField>
    <fullName>Association_Code__c</fullName>
    <label>Association Code</label>
    <length>8</length>
    <type>Text</type>
</CustomField>