force-app/main/default/objects/DA_Postcode__c/fields/Association_Name__c.field-meta.xml
<CustomField>
    <fullName>Association_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Association Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Association__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>District Association</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Association__c</referenceTo>
    <relationshipLabel>DA Postcodes</relationshipLabel>
    <relationshipName>DA_Postcodes</relationshipName>
    <type>Lookup</type>
</CustomField>