force-app/main/default/objects/DA_Postcode__c/fields/Parent_Region_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Region_Name__c</fullName>
    <label>Parent Region Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>