force-app/main/default/objects/DA_Postcode__c/fields/Postcode_Part_2__c.field-meta.xml
<CustomField>
    <fullName>Postcode_Part_2__c</fullName>
    <label>Postcode Part 2</label>
    <length>10</length>
    <type>Text</type>
</CustomField>