force-app/main/default/objects/DA_Postcode__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Association_Name__c</columns>
    <columns>Association_Code__c</columns>
    <columns>Postcode_Part_1__c</columns>
    <columns>Postcode_Part_2__c</columns>
    <columns>Parent_Region_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>