force-app/main/default/objects/DA_Postcode__c/listViews/North_Wales_Postcodes.listView-meta.xml
<ListView>
    <fullName>North_Wales_Postcodes</fullName>
    <columns>NAME</columns>
    <columns>Association_Name__c</columns>
    <columns>Postcode_Part_1__c</columns>
    <columns>Postcode_Part_2__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Association_Name__c</field>
        <operation>equals</operation>
        <value>North Wales D A</value>
    </filters>
    <label>North Wales Postcodes</label>
</ListView>